--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.28.0",
