--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
+    "process": "^0.11.10",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
